--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "psiho-scraping",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "scraper.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node scraper.ts"
+    "start": "ts-node scraper.ts",
+    "build": "tsc",
+    "pm2": "ts-node scraper.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/node": "^22.10.3",
-    "axios": "^1.7.9",
-    "cheerio": "^1.0.0",
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/node": "^20.11.19",
     "@types/cheerio": "^0.22.35"
   }
 }
