--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.6.7",
-    "cheerio": "^1.0.0-rc.12",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
